logs/dag_id=example_postgres_pandas_dag_with_decorators/run_id=manual__2024-09-26T23:43:43.993878+00:00/task_id=read_data_from_api/attempt=1.log
[2024-09-26T23:43:49.330+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-09-26T23:43:49.737+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: example_postgres_pandas_dag_with_decorators.read_data_from_api manual__2024-09-26T23:43:43.993878+00:00 [queued]>
[2024-09-26T23:43:49.837+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: example_postgres_pandas_dag_with_decorators.read_data_from_api manual__2024-09-26T23:43:43.993878+00:00 [queued]>
[2024-09-26T23:43:49.845+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2024-09-26T23:43:50.038+0000] {taskinstance.py:2330} INFO - Executing <Task(_PythonDecoratedOperator): read_data_from_api> on 2024-09-26 23:43:43.993878+00:00
[2024-09-26T23:43:50.121+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'example_postgres_pandas_dag_with_decorators', 'read_data_from_api', 'manual__2024-09-26T23:43:43.993878+00:00', '--job-id', '102', '--raw', '--subdir', 'DAGS_FOLDER/etl_prueba.py', '--cfg-path', '/tmp/tmputa92mou']
[2024-09-26T23:43:52.288+0000] {standard_task_runner.py:91} INFO - Job 102: Subtask read_data_from_api
[2024-09-26T23:43:52.320+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=94836) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-09-26T23:43:52.346+0000] {standard_task_runner.py:63} INFO - Started process 94838 to run task
[2024-09-26T23:43:52.540+0000] {task_command.py:426} INFO - Running <TaskInstance: example_postgres_pandas_dag_with_decorators.read_data_from_api manual__2024-09-26T23:43:43.993878+00:00 [running]> on host 5e909a8df6c4
[2024-09-26T23:43:53.921+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='example_postgres_pandas_dag_with_decorators' AIRFLOW_CTX_TASK_ID='read_data_from_api' AIRFLOW_CTX_EXECUTION_DATE='2024-09-26T23:43:43.993878+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-09-26T23:43:43.993878+00:00'
[2024-09-26T23:43:53.926+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-09-26T23:43:54.014+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-09-26T23:43:54.453+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/urllib3/connectionpool.py:1103 InsecureRequestWarning: Unverified HTTPS request is being made to host 'api.bcra.gob.ar'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings
[2024-09-26T23:43:54.559+0000] {logging_mixin.py:188} WARNING - /opt/***/dags/etl_prueba.py:54 UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.
[2024-09-26T23:43:54.578+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-09-26T23:43:54.587+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 2262, in execute
    cur.execute(sql, *args)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 8:             AND name=?;
                              ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/decorators/base.py", line 265, in execute
    return_value = super().execute(context)
                   ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/etl_prueba.py", line 54, in read_data_from_api
    df.to_sql(TABLA, conn, schema=schema_name, if_exists='replace', index=False)
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/util/_decorators.py", line 333, in wrapper
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/core/generic.py", line 3008, in to_sql
    return sql.to_sql(
           ^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 788, in to_sql
    return pandas_sql.to_sql(
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 2438, in to_sql
    table.create()
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 925, in create
    if self.exists():
       ^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 911, in exists
    return self.pd_sql.has_table(self.name, self.schema)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 2453, in has_table
    return len(self.execute(query, [name]).fetchall()) > 0
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 2274, in execute
    raise ex from exc
pandas.errors.DatabaseError: Execution failed on sql '
        SELECT
            name
        FROM
            sqlite_master
        WHERE
            type IN ('table', 'view')
            AND name=?;
        ': syntax error at or near ";"
LINE 8:             AND name=?;
                              ^

[2024-09-26T23:43:54.643+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=example_postgres_pandas_dag_with_decorators, task_id=read_data_from_api, run_id=manual__2024-09-26T23:43:43.993878+00:00, execution_date=20240926T234343, start_date=20240926T234349, end_date=20240926T234354
[2024-09-26T23:43:54.706+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 102 for task read_data_from_api (Execution failed on sql '
        SELECT
            name
        FROM
            sqlite_master
        WHERE
            type IN ('table', 'view')
            AND name=?;
        ': syntax error at or near ";"
LINE 8:             AND name=?;
                              ^
; 94838)
[2024-09-26T23:43:54.766+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-09-26T23:43:54.878+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-09-26T23:43:54.902+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
